# train-data-bridge

./: .env-example  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml
src/data_bridge/: __init__.py  api.py  cli.py  config.py
src/data_bridge/compute/: runner.py  vast.py
src/data_bridge/io/: __init__.py  sources.py
src/data_bridge/pipelines/: base.py  litdata.py  webdataset.py
src/data_bridge/storage/: r2.py
src/data_bridge/utils/: progress.py  vendors.py
tests/: __init__.py  helpers.py  test_api.py  test_cli_resumable.py  test_compute_vast.py  test_config_env.py  test_integration.py
